--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/cu"
+    android:background="@mipmap/pp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.myanmar.tmn.padc_f_tmn_curiosity.MainActivity"
     tools:showIn="@layout/activity_main">
